referans çizgileri ekler

--- a/src/reset.css
+++ b/src/reset.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+
+
 /* 1. Use a more-intuitive box-sizing model */
 *, *::before, *::after {
   box-sizing: border-box;
@@ -8,6 +10,7 @@
 /* 2. Remove default margin */
 * {
   margin: 0;
+  border: solid 1px pink
 }
 
 /* 3. Enable keyword animations */
